--- a/roms.ini
+++ b/roms.ini
@@ -1,5 +1,5 @@
 [AXVE]
-ROMName=PokÃ©mon Ruby (English)
+ROMName=Pokémon Ruby (English)
 ItemData=&H3C5564
 AttackNames=&H1F8320
 TMData=&H376504
@@ -110,7 +110,7 @@ StarterEncounterPokemon=&HB8EC
 StarterEncounterPokemonLevel=&HB8FA
 
 [AXPE]
-ROMName=PokÃ©mon Sapphire (English)
+ROMName=Pokémon Sapphire (English)
 ItemData=&H3C55BC
 AttackNames=&H1F82B0
 TMData=&H376494
@@ -212,7 +212,7 @@ PlayerYTable=&H
 EnemyAltitudeTable=&H
 
 [BPRE]
-ROMName=PokÃ©mon Fire Red (English)
+ROMName=Pokémon Fire Red (English)
 ItemData=&H74C0C8
 AttackNames=&H743754
 TMData=&H7549E4
@@ -341,7 +341,7 @@ IconPals=&H3D3740
 CryConversionTable=&H31F61C
 
 [BPGE]
-ROMName=PokÃ©mon Leaf Green (English)
+ROMName=Pokémon Leaf Green (English)
 ItemData=&H3DAE64
 AttackNames=&H247070
 TMData=&H45A22C
@@ -464,7 +464,7 @@ PlayerYTable=&H
 EnemyAltitudeTable=&H
 
 [BPEE]
-ROMName=PokÃ©mon Emerald (English)
+ROMName=Pokémon Emerald (English)
 ItemData=&H5839A0
 AttackNames=&H31977C
 TMData=&H616040
@@ -572,7 +572,7 @@ IconPals=&HDDE1F8
 CryConversionTable=&H31F61C
 
 [AXVF]
-ROMName=PokÃ©mon Rubis (FranÃ§ais)
+ROMName=Pokémon Rubis (Français)
 ItemData=&H3CCFC4
 AttackNames=&H200728
 TMData=&H37D168
@@ -586,7 +586,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [AXPF]
-ROMName=PokÃ©mon Saphir (FranÃ§ais)
+ROMName=Pokémon Saphir (Français)
 ItemData=&H3CCAF4
 AttackNames=&H2006B8
 TMData=&H37D0F8
@@ -600,7 +600,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [BPEF]
-ROMName=PokÃ©mon Emeraude (FranÃ§ais)
+ROMName=Pokémon Emeraude (Français)
 ItemData=&H587D6C
 AttackNames=&H3212AC
 TMData=&H61A3C8
@@ -616,7 +616,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [BPRF]
-ROMName=PokÃ©mon Rouge Feu (FranÃ§ais)
+ROMName=Pokémon Rouge Feu (Français)
 ItemData=&H3D3324
 AttackNames=&H2414A0
 TMData=&H453BA8
@@ -632,7 +632,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [BPGF]
-ROMName=PokÃ©mon Vert Feuille (FranÃ§ais)
+ROMName=Pokémon Vert Feuille (Français)
 ItemData=&H3D3160
 AttackNames=&H24147C
 TMData=&H452968
@@ -648,7 +648,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [AXVI]
-ROMName=PokÃ©mon Rubino (Italiano)
+ROMName=Pokémon Rubino (Italiano)
 ItemData=&H3C5FF8
 AttackNames=&H1F9FBC
 TMData=&H3769F4
@@ -662,7 +662,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [AXPI]
-ROMName=PokÃ©mon Zaffiro (Italiano)
+ROMName=Pokémon Zaffiro (Italiano)
 ItemData=&H3C5C9C
 AttackNames=&H1F9F4C
 TMData=&H376984
@@ -676,7 +676,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [BPEI]
-ROMName=PokÃ©mon Smeraldo (Italiano)
+ROMName=Pokémon Smeraldo (Italiano)
 ItemData=&H58000C
 AttackNames=&H319140
 TMData=&H612BDC
@@ -692,7 +692,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [BPRI]
-ROMName=PokÃ©mon Rosso Fuoco (Italiano)
+ROMName=Pokémon Rosso Fuoco (Italiano)
 ItemData=&H3D1EE8
 AttackNames=&H240138
 TMData=&H4517E8
@@ -708,7 +708,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [BPGI]
-ROMName=PokÃ©mon Verde Foglia (Italiano)
+ROMName=Pokémon Verde Foglia (Italiano)
 ItemData=&H3D1D24
 AttackNames=&H240114
 TMData=&H451018
@@ -724,7 +724,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [AXVS]
-ROMName=PokÃ©mon Rubi (EspaÃ±ol)
+ROMName=Pokémon Rubi (Español)
 ItemData=&H3C8FFC
 AttackNames=&H1FD040
 TMData=&H379A9C
@@ -738,7 +738,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [AXPS]
-ROMName=PokÃ©mon Zafiro (EspaÃ±ol)
+ROMName=Pokémon Zafiro (Español)
 ItemData=&H3C8D38
 AttackNames=&H1FCFD0
 TMData=&H379A2C
@@ -752,7 +752,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [BPES]
-ROMName=PokÃ©mon Esmeralda (EspaÃ±ol)
+ROMName=Pokémon Esmeralda (Español)
 ItemData=&H58639C
 AttackNames=&H31F9E0
 TMData=&H618E80
@@ -768,7 +768,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [BPRS]
-ROMName=PokÃ©mon Rojo Fuego (EspaÃ±ol)
+ROMName=Pokémon Rojo Fuego (Español)
 ItemData=&H3D4F50
 AttackNames=&H242800
 TMData=&H454E84
@@ -784,7 +784,7 @@ PokedexData=&H
 NumberOfDexEntries=387
 
 [BPGS]
-ROMName=PokÃ©mon Verde Hoja (EspaÃ±ol)
+ROMName=Pokémon Verde Hoja (Español)
 ItemData=&H3D4D8C
 AttackNames=&H2427DC
 TMData=&H454614
